Fix duplicate root rendering in index.html

--- a/index.html
+++ b/index.html
@@ -561,3 +561,9 @@
     </script>
 </body>
 </html>
+
+        const root = createRoot(document.getElementById("root"));
+        root.render(<App />);
+    </script>
+</body>
+</html>
